Add wordclould but it is all in the center now; I should add a offset to center x and y

--- a/notebook/wordcount.ipynb
+++ b/notebook/wordcount.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -11,33 +11,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "wc = WordCloud().generate(\"english vocabulary talking london\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[(('english', 1.0), 72, (97, 50), None, 'rgb(34, 141, 141)'),\n",
-       " (('vocabulary', 1.0), 65, (14, 8), None, 'rgb(36, 135, 142)'),\n",
-       " (('talking', 1.0), 39, (64, 20), None, 'rgb(71, 17, 100)'),\n",
-       " (('london', 1.0), 39, (160, 253), None, 'rgb(110, 206, 88)')]"
+       "[(('english', 1.0), 14, (49, 12), None, 'rgb(218, 227, 25)'),\n",
+       " (('vocabulary', 0.5), 10, (7, 5), None, 'rgb(72, 27, 109)'),\n",
+       " (('talking', 0.5), 10, (34, 35), None, 'rgb(56, 88, 140)'),\n",
+       " (('london', 0.5), 10, (20, 20), None, 'rgb(216, 226, 25)')]"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "wc = WordCloud(width=80, height=80).generate(\"english english vocabulary talking london\")\n",
     "wc.layout_"
    ]
   },
